Updated header data

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Upvote Anywhere" />
     <meta property="og:url" content="https://upvoteanywhere.com" />
     <meta
-      property="og:image:secure"
+      property="og:image"
       content="https://upvoteanywhere.com/preview.png"
     />
     <meta property="og:img" content="https://upvoteanywhere.com/preview.png" />
